Interviiew-TF Code-&-Yaml/Pipeline/Microservices_pipeline/TodoAppProject (1)/todoapp_manifest/todoapp-backend/deletetodo/deletetododeploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deletetask
spec:
  replicas: 2
  selector:
    matchLabels:
      app: deletetask
  template:
    metadata:
      labels:
        app: deletetask
    spec:
      containers:
      - name: deletetask
        image: devramacr1.azurecr.io/ram-repository/deletetasktodo:v1
        ports:
        - containerPort: 8000
