Interviiew-TF Code-&-Yaml/Pipeline/Microservices_pipeline/TodoAppProject (1)/todoapp_manifest/todoapp-backend/deletetodo/deletetasksvc.yaml
apiVersion: v1
kind: Service
metadata:
  name: deletetask
spec:
  selector:
    app: deletetask
  ports:
  - port: 80
    targetPort: 8000
